--- a/gilbert-strang/lec14-Orthogonal-vectors-subspaces.ipynb
+++ b/gilbert-strang/lec14-Orthogonal-vectors-subspaces.ipynb
@@ -32,11 +32,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if $u \\cdot v = 0$ , then $u$ and $v$ are orthogonal.\n",
+    "for any vector $u$:\n",
+    "\n",
+    "$||u||^2 = u^T u$\n",
+    "\n",
+    "if $u \\cdot v = 0$ , then $u$ and $v$ are orthogonal:\n",
     "\n",
     "$u^T v = 0$\n",
     "\n",
-    "$||u||^2 = u^T u$\n",
+    "$ ||u||^2 + ||v||^2 = ||u+v||^2 $\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -48,10 +56,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle x^{2}$"
+       "$\\displaystyle \\left[\\begin{matrix}1\\\\2\\\\3\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "x**2"
+       "Matrix([\n",
+       "[1],\n",
+       "[2],\n",
+       "[3]])"
       ]
      },
      "execution_count": 1,
@@ -59,7 +70,190 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "u = sp.Symbol('u')\n",
+    "v = sp.Symbol('v')\n",
+    "u = sp.Matrix([1, 2, 3])\n",
+    "u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}2\\\\-1\\\\0\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[ 2],\n",
+       "[-1],\n",
+       "[ 0]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = sp.Matrix([2, -1, 0])\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Matrix([[14]]), Matrix([[5]]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.T * u, v.T * v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}3\\\\1\\\\3\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[3],\n",
+       "[1],\n",
+       "[3]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = u+v\n",
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}19\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([[19]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w.T * w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.T * u + v.T * v == w.T * w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 0$"
+      ],
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.dot(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Orthogonal subspaces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What does Subspace $S$ is orthogonal to another subspace $T$ mean?\n",
+    "\n",
+    "Every vector in $S$ is orthogonal to every vector in $T$.\n",
+    "\n",
+    "row space is orthogonal to nullspace. Why?\n",
+    "\n",
+    "$ A * x = 0 $\n",
+    "\n",
+    "The dot product of each row of the Matrix $A$ with the vector x that come from nullspace equal $0$.\n",
+    "\n",
+    "$ row_i \\cdot x = 0 $\n",
+    "\n",
+    "and The dot product of any linear combination of rows of the Matrix $A$ with the vector x also equals $0$.\n",
+    "\n",
+    "For any $c_1, c_2, row_i, row_j$:\n",
+    "\n",
+    "$ (c_1 * row_i) \\cdot x = 0$\n",
+    "\n",
+    "$ (c_2 * row_j) \\cdot x = 0$\n",
+    "\n",
+    "so $ (c_1 * row_i + c_2 * row_j) \\cdot x = 0 $ \n",
+    "\n",
+    "nullspace and rowspace are orthogonal complement in $R^n$."
+   ]
   }
  ],
  "metadata": {
