add projection onto plane equation.

--- a/gilbert-strang/lec15-projections.ipynb
+++ b/gilbert-strang/lec15-projections.ipynb
@@ -8,8 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting a projection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1089,6 +1096,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Projection formula proof"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Proof:\n",
     "\n",
     "let $ p = x * a$  and  $ e = b - p $\n",
@@ -1114,6 +1128,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Projection Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What is the Projection Matrix?\n",
     "\n",
     "$ P = \\frac{a * a^T}{a^T * a} $\n",
@@ -1127,7 +1148,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}4\\\\4\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[4],\n",
+       "[4]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sympy\n",
+    "\n",
+    "a = sympy.Matrix([4,4])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1137,79 +1206,216 @@
        "       [3, 9]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([[1], [3]])\n",
-    "a_t = np.array([[1, 3]])\n",
-    "a @ a_t"
+    "a * a.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle 32$"
+      ],
       "text/plain": [
-       "array([[10]])"
+       "32"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a_t @ a"
+    "a.dot(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{2} & \\frac{1}{2}\\\\\\frac{1}{2} & \\frac{1}{2}\\end{matrix}\\right]$"
+      ],
       "text/plain": [
-       "array([[0.1, 0.3],\n",
-       "       [0.3, 0.9]])"
+       "Matrix([\n",
+       "[1/2, 1/2],\n",
+       "[1/2, 1/2]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "P = (a @ a_t) / 10\n",
+    "P = a * a.T / a.dot(a)\n",
     "P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{2} & \\frac{1}{2}\\\\\\frac{1}{2} & \\frac{1}{2}\\end{matrix}\\right]$"
+      ],
       "text/plain": [
-       "array([[0.1, 0.3],\n",
-       "       [0.3, 0.9]])"
+       "Matrix([\n",
+       "[1/2, 1/2],\n",
+       "[1/2, 1/2]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "P @ P"
+    "P * P"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P.rank()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P.T == P"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why project?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because $ Ax = b $ may not have a solution, solve $ Ax = p $ instead. This is the closest we can get to a solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projection onto a plane or n-dimensional subspace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a plane, the basis vectors are $ a_1 $ and $ a_2 $, and we want to project $ b $ onto the plane, and get the projection vector $ p $, the error $ e = b - p $.\n",
+    "\n",
+    "$$\n",
+    "p = x_1 * a_1 + x_2 * a_2 = A * \\hat{x} \\\\\n",
+    "$$\n",
+    "\n",
+    "The key is $ b - A * \\hat{x} $ is orthogonal to the plane.\n",
+    "\n",
+    "So we get\n",
+    "$$\n",
+    "a_1^T * (b - A * \\hat{x}) = 0 \\\\\n",
+    "a_2^T * (b - A * \\hat{x}) = 0\n",
+    "$$\n",
+    "\n",
+    "Rewrite the equations above in matrices form:\n",
+    "$$\n",
+    "A^T * (b - A * \\hat{x}) = 0 \\\\\n",
+    "$$\n",
+    "\n",
+    "$ e $ is in the nullspace of $ A^T $. $ e $ is orthogonal to the column space of $ A $. \n",
+    "\n",
+    "$$\n",
+    "A^T * A * \\hat{x} = A^T * b \\\\\n",
+    "\\hat{x} = (A^T * A)^{-1} * A^T * b \\\\\n",
+    "p = A * \\hat{x} = A * (A^T * A)^{-1} * A^T * b \\\\\n",
+    "P = A * (A^T * A)^{-1} * A^T \\\\\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ A $ is not a square matrix, so $ A^-1 $ does not exist. But $ A^T * A $ is a square matrix, so $ (A^T * A)^{-1} $ exists. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projection onto a plane and plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Least Squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
